[package]
name = "advent_of_code_2022"
version = "0.1.0"
authors = ["tistatos <tistatos@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
advent_of_code={ version ="0.1.0", path="../aoc"}

[[bin]]
name = "day1"
path = "src/day1.rs"

[[bin]]
name = "day2"
path = "src/day2.rs"
